# evm-from-scratch

./: .gitignore  README.md  evm.json  myevm.json
journal/: Day1.md  Day10.md  Day11.md  Day12.md  Day2.md  Day3.md  Day4.md  Day5.md  Day6.md  Day7.md  Day8.md  Day9.md
rust/: Cargo.toml
rust/src/: block_data.rs  errors.rs  evm.rs  jumpdest.rs  lib.rs  logs.rs  main.rs  memory.rs  opcode.rs  state_data.rs  storage.rs  tx_data.rs  utility.rs
