[package]
name = "evm"
authors = ["alessandro98.mazza@gmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
primitive-types = "0.12.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
thiserror = "1.0.50"
bit-vec = "0.6"
sha3 = "0.10.8"
